aula sobre imagens - CursoEmVideo

--- a/aulas/ex003-imagens/index.html
+++ b/aulas/ex003-imagens/index.html
@@ -4,31 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="Reclusekc-Kulo-Skull-3.ico" type="image/x-icon">
     <title>AULA 6</title>
 </head>
 <body>
     <h1>Aula 6: IMAGENS</h1>
     <hr>  <!--linha horizontal-->
 
-    <h2>Direito sobre uso de Imagens</h2>
+    <h2>Sites para baixar imagens com licença free</h2>
     <p> <!--inicio de parágrafo-->
-        Sites para baixar imagens com licença free: <br>
-        <a href="https://unsplash.com" target="_blank">UNSPLASH</a><br>
+        <a href="https://unsplash.com" target="_blank">UNSPLASH</a>
+        <br>
         <a href="https://www.pexels.com/pt-br/" target="_blank">PEXELS</a>
         <br>
-    </p> <!--fim de parágrafo--2>
+    </p> <!--fim de parágrafo-->
 
     <h2>Formatos de imagem</h2>
     <p>
-        - JPEG: alta capacidade de compactação;<br>
-        - GIF: suporta animação e transparência;<br>
-        - PNG: suporta transparência, apenas;<br>
+        - JPEG: alta capacidade de compactação;
+        <br>
+        - GIF: suporta animação e transparência;
+        <br>
+        - PNG: suporta transparência, apenas;
     </p>
 
-    <h2>Importancia dos tamanhos para um Site</h2>
-    <p>
-        
+    <h2>Softwares para edição de imagens:</h2>
+    <p> 
+        <a href="https://www.gimp.org/">GIMP</a>
+        <br>
+        <a href="https://inkscape.org/pt-br/">INKSCAPE</a>
     </p>
-    <!-- GIMP(gratuito): manipulação de imagens <br>-->
+
+    <h2>Importância dos tamanhos para um Site</h2>
+    <p>
+        - Diminui o carregamento da pág;
+        <br>
+        - Otimiza o tráfego de dados;
+    </p>
+    <h2>Carga de imagens</h2>
+    <p>Abaixo verás uma imagem que está na pasta</p>
+    <img src="logo-html-200.png" alt="Logo HTML5">
+    <p>Podemos também carregar imagens em subpastas</p>
+    <img src="subpasta/logo-css-200.png" alt="Logo CSS3">
+    <p>Também podemos carregar imagens externas</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/240px-JavaScript-logo.png?uselang=pt-br" alt="js imagem">
 </body>
 </html>
