--- a/aulas/ex009-listas/index.html
+++ b/aulas/ex009-listas/index.html
@@ -10,10 +10,55 @@
     <h1>Trabalhando com listas</h1>
 
     <h2>Listas Ordenadas</h2>
-    <ol>
+    <ol type="a" start="1"> <!--lista ordenada, do tipo numérico, começando em 1 // types: 1, a, A, i, I-->
         <li>Acordar</li>
         <li>Tomar Café</li>
         <li>Escovar os dentes</li>
+        <li>Ir para facul</li>
+        <li>Almoçar</li>
+        <li>Ir para o trabalho</li>
+        <li>Voltar para casa</li>
+        <li>Jantar</li>
+        <li>Dorrmir</li>
     </ol>
+
+    <h2>Listas Não Ordenadas</h2>
+    <ul type="disc"> <!-- types: disc, circle, square-->
+        <li>Pão</li>
+        <li>Manteiga</li>
+        <li>Tomate</li>
+        <li>Arroz</li>
+        <li>Feijão</li>
+        <li>Cenoura</li>
+        <li>Batatas</li>
+    </ul>
+
+    <h2>Lista Mista: Filmes Favoritos</h2>
+    <ol>
+        <li>Épicos</li>
+        <ol type="a" start="1">
+            <li>O último Samurai</li>
+            <li>O Patriota</li>
+            <li>Gladiador</li>
+        </ol>
+        <li>Ação</li>
+        <ol type="a" start="4">
+            <li>Trilogia Bourn</li>
+            <li>Ninja Assaassino</li>
+        </ol>
+    </ol>
+
+    <h2>Lista de Definições</h2>
+    <dl>
+        <dt>termo</dt>
+        <dd>definição</dd>
+        <dt>HTML</dt>
+        <dd>Linguagem de marcação para a criação de conteúdo em site</dd>
+        <dt>CSS</dt>
+        <dd>Linguagem de marcação para a criação do design de um site</dd>
+        <dt>JavaScript</dt>
+        <dd>Linguagem de programação para a criação de interatiovidade de um site</dd>
+    </dl>
+
 </body>
 </html>
