--- a/aulas/ex010-links-ancoras/index.html
+++ b/aulas/ex010-links-ancoras/index.html
@@ -36,5 +36,11 @@
     <p>Esta é a primeira pág. do site. Se você quiser, pode acessar também a <a href="pag002.html" rel="next">Segunda página</a>.
     </p>
     <p>Você também pode acessar a nossa <a href="noticias/pag003.html" rel="next">Terceira pág.</a></p>
+
+    <h1>Links para Downloads</h1>
+    <ul>
+        <li><a href="livros/meulivro.pdf" download="meulivro.pdf" type="application/pdf" target="_blank">Baixar o livro em PDF</a></li>
+        <li><a href="livros/meulivro.zip" download="meulivro.zip" type="application/zip">Livro compactado em ZIP</a></li>
+    </ul>
 </body>
 </html>
