desafio de HTML OK

--- a/aulas/desafio09/index.html
+++ b/aulas/desafio09/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indicação de Aulas</title>
-    favicon
+    <link rel="shortcut icon" href="imagens/light-bulb (1).png" type="image/x-icon">
 </head>
 <body>
-    
+
+    <div  align = "center">
+        <h1>Videos Legais para assistir</h1>
+        <p>
+            <a href="pag1-cursohtml.html">
+                <img src="imagens/thumb-html.jpg" alt="html-curso-em-video" width="300">
+            </a>
+            <a href="pag2-cjavascript.html">
+                <img src="imagens/thumb-js.jpg" alt="java-script-curso-em-video" width="300">
+            </a>
+            <br>
+            <a href="pag3-cpython.html"><img src="https://i.ytimg.com/vi/S9uPNppGsGo/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLBdufuoJdaVhVi1j6gQJgfUqD0T8w" alt="pithon-curso-em-video" width="300">
+            </a>
+            <a href="pag4-chardware.html"><img src="imagens/thumb-hardware.jpg" alt="hardware-cruso-em-video" width="300">
+            </a>
+        </p>
+    </div>
 </body>
 </html>
