--- a/aulas/mod2-desafio10/home.html
+++ b/aulas/mod2-desafio10/home.html
@@ -12,9 +12,18 @@
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap');
 
         body{
-            background-color: #b6f5bb;
+            background-color: #89d1a8;
             font-family: 'Roboto', sans-serif;
+            margin: 0px;
         }
+
+        header{
+            background-image: linear-gradient(to top, rgba(0, 0, 0, 0.836), #41D983);
+            color: white;
+            text-align: center;
+            
+        }
+
     </style>
 </head>
 <body>
