--- a/aulas/ex18-mod2-fontes-externas/fontes02.html
+++ b/aulas/ex18-mod2-fontes-externas/fontes02.html
@@ -9,7 +9,7 @@
     <style>
         @font-face {
             font-family: Ruthie;
-            src: url(fonts/Ruthie-Regular.ttf) format(opentype) ;
+            src: url(fonts/Ruthie-Regular.ttf) format('truetype') ;
             font-style: normal;
 
             /*Tipos de format
@@ -21,7 +21,7 @@
             
             */
         }
-
+S
         body{
             font-family: Arial, Helvetica, sans-serif;
             }
