--- a/aulas/mod2-desafio10/index.html
+++ b/aulas/mod2-desafio10/index.html
@@ -18,6 +18,12 @@
         <a href="#">Notícias</a>
         <a href="#">Curiosidades</a>
         <a href="#">Fale Conosco</a>
+       
+        <div id="navigation">
+            <label for="titulo1">A primeira Versão</label>
+            <label for="titulo2">Um Novo Mascote</label>
+            <label for="titulo3">Saiba mais</label>
+        </div>
     </nav>
     <main>
         <article>
@@ -25,7 +31,7 @@
 
             <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas talvez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
 
-            <h2>A primeira versão</h2>
+            <h2 id="titulo1">A primeira versão</h2>
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://danmorrill.org/" target="_blank" class="externo">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
@@ -35,7 +41,7 @@
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
-            <h2>Surge um novo mascote</h2>
+            <h2 id="titulo2">Surge um novo mascote</h2>
 
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" class="externo">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
@@ -53,7 +59,7 @@
 
 
             <aside>
-                <h3>Quer aprender mais? </h3>
+                <h3 id="titulo3">Quer aprender mais? </h3>
                 <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
                 
                 <ul>
