--- a/aulas/Mod3-HTML-CSS/ex022-mod3/fundo001.html
+++ b/aulas/Mod3-HTML-CSS/ex022-mod3/fundo001.html
@@ -7,9 +7,9 @@
     <title>Teste de Imagem de Fundo</title>
     <style>
 
-        body{
+        /* body{
             background-image: url(img/wallpaper001.jpg);
-        }
+        } */
 
         div.quadrado{
             display: inline-block;
